# semester-project-esp-idf

./: .gitignore  CMakeLists.txt  README.md  backend.Dockerfile  docker-compose.yml  test_server.py
.vscode-copy/: settings.json
ESP-INITIAL/: custom_partition.csv
ESP-INITIAL/main/: CMakeLists.txt  main.c
ESP-INITIAL/main/headers/: http_routine.h  mqtt_routine.h  ota_routine.h
ESP-INITIAL/main/src/: http_routine.c  mqtt_routine.c  ota_routine.c
ESP-OTA-MQTT/: CMakeLists.txt  auto-build.sh  custom_partition.csv  nix-build.sh  output.txt  sdkconfig  sdkconfig.ci  sdkconfig.old
ESP-OTA-MQTT/Downloads/: DHT11_sensor.h  lightResReader_reader.h  shared_snem_library.c  target_device_type.h
ESP-OTA-MQTT/main/: CMakeLists.txt  Kconfig.projbuild  http_routine.c  http_routing.c  lightResReader_reader.h  main.c  mqtt_routine.c  mqtt_routine.h  ota_routine.c  shared_snem_library.c  shared_snem_library.h  target_device_type.c  target_device_type.h
ESP-OTA-MQTT/main/files/: spiffs.h
ESP-OTA-MQTT/main/headers/: http_routine.h  mqtt_routine.h  ntp.h  ota_routine.h  sensor_utils.h
ESP-OTA-MQTT/main/http/: http_routine.c  http_routine.h
ESP-OTA-MQTT/main/sensors/: dht11Reader_reader.c  lightResReader_reader.c  sensor_utils.c  sensor_utils.h  shared_snem_library.c  target_device_type.c  target_device_type.h
ESP-OTA-MQTT/main/src/: http_routine.c  mqtt_routine.c  ntp.c  ota_routine.c  sensor_utils.c  spiffs.c
UI/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.vitest.json  uno.config.ts  vite.config.ts
UI/public/esp-web-install/: manifest.json
UI/src/: App.vue  main.ts
UI/src/api/: AreaApi.md  DataPointsApi.md  DeviceTypeApi.md  LogsApi.md  ProgramApi.md  SatelliteApi.md  index.ts
UI/src/api/apis/: AreaApi.ts  (+5 more)
UI/src/assets/: base.css  dummy.ts  main.css
UI/src/components/: AreaDetail.vue  AreaList.vue  DeviceDetail.vue  DeviceList.vue  GlobalNavigation.vue  HomeArea.vue  HomeSatellite.vue  LoadingSpinner.vue  LogItem.vue  XtextEditor.vue
UI/src/composables/: useInterval.ts  useTime.ts
UI/src/router/: index.ts
UI/src/stores/: api.ts  dataStore.ts  xtextRegex.js
UI/src/types/: Area.ts  DataPoint.ts  Device.ts  Log.ts  Satellite.ts  SatelliteType.ts
UI/src/views/: AreasView.vue  DataMonitoringView.vue  DevicesView.vue  DslView.vue  HomeView.vue  LogsView.vue  NewDeviceView.vue
_old/: ca2.pert  generate-cert.sh
_old/tmp/: rootCACert.pem  rootCAKey.pem  server.crt  server.csr  server.key  server_cert.conf
backend/: .gitignore  Dockerfile  docker-compose.yml  pom.xml
compiler2/66413c850a61013cb5af049d/: CMakeLists.txt  auto-build.sh  sdkconfig.old
compiler2/66413c850a61013cb5af049d/main/: CMakeLists.txt  ota_routine.c
compiler2/66413c850a61013cb5af049e/: sdkconfig
compiler2/66414fc3fac7b93155104ea7/main/: CMakeLists.txt  Kconfig.projbuild  http_routine.h  mqtt_routine.h  target_device_type.c
compiler2/66414fc3fac7b93155104ea7/main/Downloads/: lightResReader_reader.c  target_device_type.c
compiler2/66414fc3fac7b93155104ea7/main/sensors/: sensor_utils.c
emulator/: Dockerfile  EMU_MAC_ADDRESS  satelitte.py
main/: simple_ota_example.c
server_certs/: ca_cert.pem
tmp/: ca.key  ca.srl  generate-ca.sh
xtext_project/: README.md
xtext_project/org.example.helloweb.parent/: .dockerignore  .project  Dockerfile  pom.xml
xtext_project/xtext_output_example/: ddd.mydsl
(+245 files in other folders)
